<resources>
  <string name="app_name">Tella</string>
  <string name="collect.blank_action_update.form">Update</string>
  <string name="settings.about_app.bar">About &amp; Help</string>
  <string name="collect.form_exit.unsaved_dialog.title">Exit form?</string>
  <string name="verification_prompt_dialog_title">Enable GPS?</string>
  <string name="collect_tab.title_blank">Blank</string>
<string name="settings_menu.item_contact">Contact us</string>
  <string name="collect_dialog.text_download.progress">Downloading the form</string>
  <string name="collect_toast_download.completed">Download completed</string>
<string name="collect.draft_tab.title">Draft</string>
  <string name="collect.blank_action_download.form">Download</string>
  <string name="settings_text_empty.field">This field cannot be empty.</string>
  <string name="home_toast_back.exit">Tap the \"Back\" button again to exit the app</string>
  <string name="settings.docu_toast_fail.load.list.connected.servers">There was an error loading the list of servers. Please try again</string>
  <string name="settings.docu_toast_fail.create.server">There was an error creating the server settings. Please try again</string>
  <string name="settings.docu_toast_fail.update.server">There was an error updating the server settings. Please try again</string>
  <string name="settings.docu_toast_fail.delete.server">There was an error deleting the server settings. Please try again</string>
  <string name="settings.about_list.item_faq">FAQ</string>
  <string name="action_ok">OK</string>
  <string name="collect.form_toast_validation.error">This response is invalid</string>
  <string name="collect.form_error_response.mandatory">This response is mandatory.</string>
  <string name="homescreen_heading_quick.delete">Quick Delete
mode activation</string>
  <string name="settings.about_list.item_privacy.policy">Privacy policy</string>
  <string name="recorder_toast_fail.recording">There was an error recording the audio. Please try again</string>
  <string name="recorder_content.desc_blinking.red.dot">Recording audio</string>
  <string name="action_remove">Remove</string>
  <string name="settings_app.bar">Settings</string>
  <string name="action_save">Save</string>
  <string name="lock_dialog.expl_save.pattern">Saving your lock pattern</string>
  <string name="lock_dialog.expl_unlock.app">Unlocking Tella</string>
  <string name="action_skip">Skip</string>
  <string name="settings.docu_delete.server_dialog.expl">If you delete this server, all draft and submitted forms will be deleted from your device. Delete anyway?</string>
  <string name="settings.docu_toast_server.deleted">Server deleted</string>
  <string name="settings.docu_toast_server.created">Server created</string>
  <string name="settings.docu_toast_server.updated">Server updated</string>
  <string name="settings.docu_dialog.title_server.settings">Server settings</string>
  <string name="settings.docu_field_server.name">Server name</string>
  <string name="settings.docu_field_server.url">Server URL</string>
  <string name="collect.sent_tab.title">Submitted</string>
  <string name="home_expl_cancel.quick.delete">Tap anywhere to cancel</string>
  <string name="recorder_app.bar">Recorder</string>
  <string name="settings.docu_field_username">Username</string>
  <string name="collect.draft_meta_date.updated">Updated: %1$s</string>
  <string name="settings.about_app.version">Version</string>
  <string name="collect_toast_draft.saved">Draft saved</string>
  <string name="collect_toast_fail.sending.form">There was an error submitting the form. Please try again</string>
  <string name="collect_toast_fail.form.submission.generic">There was an error submitting the form: %s</string>
  <string name="collect.form_toast_validation.generic.error">There were validation errors in some answers</string>
  <string name="permission_dialog.expl_GPS">In order to make your files verifiable, Tella needs to record your location and needs permission to access your GPS.</string>
  <string name="collect.form_action_select.time">Select time</string>
  <string name="collect.form_action_select.date">Select date</string>
  <string name="collect_dialog.expl_downloading.blank.forms">Downloading forms</string>
  <string name="collect.blank_toast_fail.updating.form.list">There was an error updating the list of forms. Please try again</string>
  <string name="collect_toast_fail.parsing.form">There was an error displaying this form. Please try again</string>
  <string name="collect.end_action_save.send.later">Save form</string>
  <string name="collect_action.desc_save.form">Save form</string>
  <string name="collect.end_action.desc_save.send.later">Save form</string>
  <string name="action.desc_confirm">Confirm</string>
  <string name="collect.form_action_previous.section">Previous</string>
  <string name="collect.form_action_next.section">Next</string>
  <string name="action_stop">Stop</string>
  <string name="action_play">Play</string>
  <string name="action_record">Record</string>
  <string name="play.audio_app.bar">Play Audio</string>
  <string name="collect_dialog.text_delete.sent.form">Are you sure you want to delete this form from your device? Note that because it was already submitted, the data will remain on your organization\'s server.</string>
  <string name="collect_dialog.text_delete.draft.form">Are you sure you want to delete this draft form?</string>
  <string name="collect_toast_form.deleted">The form was deleted</string>
  <string name="settings.lang_select.expl_default">Keep Tella in the same language as my device</string>
  <string name="settings.lang_select_default">Default</string>
  <string name="settings.lang_app.bar">Language</string>
  <string name="action_share">Share</string>
  <string name="collect_toast_fail.submission.unauthorized">You do not have permission to submit this form. If you think this is a mistake, please contact your organization</string>
  <string name="gallery_toast_fail.importing.file">There was an error importing the file. Please try again</string>
  <string name="collect.end_heading">End of the form</string>
  <string name="collect.end_toast_notification.form.not.sent.no.connection">You’re not connected to the internet. Try again when connected</string>
  <string name="collect.sent_dialog.expl_discard.unsent.form">Parts or all of the form wasn\'t sent. Are you sure you want to discard it?</string>
  <string name="action_discard">Discard</string>
  <string name="collect.end_action_submit">Submit</string>
  <string name="gallery_toast_fail.exporting.to.device">There was an error exporting the files. Please try again</string>
  <string name="permission_dialog.expl_device.storage">In order to export files, Tella needs permission to write on the device\'s storage.</string>
  <string name="gallery_toast_fail.deleting.files">There was an error deleting the files. Please try again.</string>
  <plurals name="gallery_toast_files.exported">
    <item quantity="one">%1$d file saved to the device</item>
    <item quantity="other">%1$d files saved to the device</item>
  </plurals>
  <string name="gallery_delete.files_dialog.title">Delete file?</string>
  <string name="gallery_delete.files_dialog.expl">The selected file will be permanently deleted from your gallery.</string>
  <string name="gallery_save.to.device_dialog.title">Save to device gallery?</string>
  <string name="gallery_save.to.device_dialog.expl">This will make your file accessible from outside Tella, in your device\'s gallery and by other apps.</string>
  <string name="gallery_dialog.expl_encrypting">Encrypting</string>
  <string name="gallery_save.to.device_dialog.progress.expl">Decrypting</string>
  <string name="gallery_toast_fail.import">There was an error opening the gallery to import the files. Please try again</string>
  <string name="gallery_toast_fail.saving.file">There was an error saving the file. Please try again</string>
  <string name="collect_toast_fail.attaching.file.to.form">There was an error attaching the file. Please try again</string>
  <string name="collect_toast_fail.fetch.form.from.server.unknown.error">There was an error downloading the form. Please try again</string>
  <string name="collect_toast_fail.fetch.form.from.server.display.error">There was an error downloading the form: %s</string>
  <string name="collect_toast_reason.fail.fetch.form.from.server">The form could not be found. It may have been deleted from your organization\'s server</string>
  <string name="gallery_heading_files.from.Tella.gallery">Tella Gallery</string>
  <string name="settings_select_general">General</string>
  <string name="action_next">Next</string>
  <string name="onboard_setup_lock">How would you like to lock Tella?</string>
  <string name="onboard_password">Password</string>
  <string name="onboard_password_description">The most secure option</string>
  <string name="onboard_pin">PIN</string>
  <string name="onboard_pin_description">Moderately secure</string>
  <string name="onboard_pattern">Pattern</string>
  <string name="onboard_pattern_description">The least secure option</string>
  <string name="Connected_Successfuly_Text">You have successfully connected to the server and will be able to share your data.</string>
  <string name="action_yes">yes</string>
  <string name="action_no">no</string>
<string name="onboard_setup_text">How would you like to set up Tella?</string>
  <string name="onboard_full_setup">FULL SETUP</string>
  <string name="onboard_quick_setup">QUICK SETUP</string>
  <string name="onboard_setup_explore_custom">Explore and fully customize the app</string>
  <string name="onboard_setup_start">Set the lock and get started immediately</string>
  <string name="onboard_setup_customization">Have a customization code/file?</string>
  <string name="Server_Connect_Icon">server connect image</string>
  <string name="Settings_Reports_Connected_To_Project">Connected to project</string>
  <string name="Settings_Reports_Go_To_Reports">GO TO REPORTS</string>
  <string name="Settings_reports_Go_To_Advanced_Settings">Advanced settings</string>
  <string name="Setting_Reports_Share_Information_Title">Share verification information</string>
  <string name="Setting_Reports_Share_Information_Description">Include information about your device and location when sending reports, to make your files verifiable. </string>
  <string name="Setting_Reports_Background_Upload">Background upload</string>
  <string name="Setting_Reports_Background_Upload_Description">Continue uploading reports while doing other tasks or if you exit Tella.
WARNING: If enabled, Tella will remain unlocked until all reports are fully uploaded.</string>
  <string name="connect_manually">Connect manually</string>
  <string name="show_device_information">Show your device information</string>
  <string name="device_connection_instructions">The sender needs to input the following
 to connect to your device.</string>
  <string name="pin">PIN</string>
  <string name="port">Port</string>
  <string name="verification">Verification</string>
  <string name="ip_address">IP address</string>
  <string name="wifi_confirmation_title">Are you both on the same Wi-Fi network?</string>
  <string name="wifi_confirmation_message">Both devices must be connected to the same Wi-Fi network, using local Wi-Fi or setting up a Hotspot connection.</string>
  <string name="dont_show_again">Don\'t show again</string>
  <string name="pdf_annot_title_highlight">Highlight</string>
  <string name="pdf_annot_title_sticky_note">Sticky note</string>
  <string name="pdf_annot_title_clear">Clear all annotations</string>
  <string name="pdf_annot_title_list">List annotations</string>
  <string name="pdf_annot_title_copy_text">Copy page text</string>
  <string name="pdf_annot_title_goto_page">Go to page</string>
  <string name="pdf_share_title">Share PDF</string>
  <string name="pdf_annot_title_rotate">Rotate</string>
</resources>