<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".218"
        android:id="@+id/guideH218"
        />
    <TextView
        style="@style/Tella_Main_White_Text.Bold"
        app:layout_constraintTop_toBottomOf="@id/guideH218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/onboard_setup_lock"
        android:textSize="18sp"
        android:id="@+id/setupMainLockTv"
        />
    <rs.readahead.washington.mobile.views.custom.InformationButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/setupMainLockTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:startImg="@drawable/tella_dark__logo"
        app:topText="@string/onboard_password"
        app:bottomText="@string/onboard_password_description"
        android:id="@+id/lockPasswordBtn"
        />
    <rs.readahead.washington.mobile.views.custom.InformationButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/lockPasswordBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:startImg="@drawable/tella_dark__logo"
        app:topText="@string/onboard_pin"
        app:bottomText="@string/onboard_pin_description"
        android:id="@+id/lockPINdBtn"
        />
    <rs.readahead.washington.mobile.views.custom.InformationButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/lockPINdBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:startImg="@drawable/tella_dark__logo"
        app:topText="@string/onboard_pattern"
        app:bottomText="@string/onboard_pattern_description"
        android:id="@+id/lockPatternBtn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>