<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drag_anchor_drawable"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_confirmation_title"
        android:textColor="@color/wa_white"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/wa_white"
        android:text="@string/wifi_confirmation_message" />

    <CheckBox
        android:id="@+id/dontShowAgainCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/wa_white"
        android:textColor="@color/wa_white"
        android:text="@string/dont_show_again" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:padding="8dp"
            android:text="@string/action_no"
            android:textColor="@color/wa_white"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/action_yes"
            android:textColor="@color/wa_white"
            android:textAllCaps="true" />
    </LinearLayout>

</LinearLayout>
