<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".214"
        android:id="@+id/guideH214"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideH214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/img_setup"
        android:id="@+id/setupImgV"
        />
    <TextView
        style="@style/Tella_Main_White_Text.Bold"
        app:layout_constraintTop_toBottomOf="@id/setupImgV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/onboard_setup_text"
        android:textSize="18sp"
        android:id="@+id/setupMainTv"
        />
    <rs.readahead.washington.mobile.views.custom.InformationButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@id/setupMainTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            app:topTextCenter="@string/onboard_full_setup"
            app:bottomTextCenter="@string/onboard_setup_explore_custom"
            android:id="@+id/fullSetupBtn"
        />
    <rs.readahead.washington.mobile.views.custom.InformationButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/fullSetupBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:topTextCenter="@string/onboard_quick_setup"
        app:bottomTextCenter="@string/onboard_setup_start"
        android:id="@+id/quickSetupBtn"
        />
    <TextView
        android:id="@+id/link"
        style="@style/Tella_Main_White_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quickSetupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboard_setup_customization"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/wa_light_gray"
        android:textSize="12sp"
        android:clickable="true"
        android:focusable="true" />




</androidx.constraintlayout.widget.ConstraintLayout>