<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple">


    <org.hzontal.shared_ui.appbar.ToolbarComponent
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:arrowBackIcon="@drawable/ic_close_white"
        app:arrowBackIconContentDescription="@string/connect_manually"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:startTitle="@string/verification" />


    <ImageView
        android:id="@+id/deviceImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/device"
        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/titleTextView"
        style="@style/Tella_Main_White_TextExtraLargeBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/show_device_information"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/titleDescTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceImg" />

    <TextView
        android:id="@+id/titleDescTextView"
        style="@style/Tella_Main_White_Text.Meduim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/device_connection_instructions"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/connectCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <org.hzontal.shared_ui.buttons.DualTextCheckView
        android:id="@+id/connectCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDescTextView"
        app:leftText="@string/ip_address" />

    <org.hzontal.shared_ui.buttons.DualTextCheckView
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectCode"
        app:leftText="@string/pin" />

    <org.hzontal.shared_ui.buttons.DualTextCheckView
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        app:leftText="@string/port" />

    <TextView
        android:id="@+id/back_btn"
        style="@style/Unlock_White_Text_Back"
        android:text="@string/LockSelect_Action_Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>